@@ -1,3 +1,15 @@
+2010-03-22  Chris Jerdonek  <cjerdonek@webkit.org>
+
+        Reviewed by Adam Barth.
+
+        Refactored the cpu_count() code in executive.py.
+
+        https://bugs.webkit.org/show_bug.cgi?id=36437
+
+        * Scripts/webkitpy/executive.py:
+          - Moved the import of the multiprocessing module to the top
+            of the file rather than importing from within a function.
+
 2010-03-22 Antonio Gomes <tonikitoo@webkit.org>
 
         Unreviewed.
